# RM_SDK1

Desktop/RM_SDK1/risk-daemon/: .coverage  .env.example  .gitignore  .test_scripts_info  CLAUDE.md  COMMANDS.md  Makefile  README_TESTING.md  ai_coverage_summary.py  conftest.py  cov  coverage_report.py  invoke_planner.sh  menu.sh  pyproject.toml  pytest.ini  run_tests.sh  test  test_sdk_connection.py  track_coverage.sh  view
Desktop/RM_SDK1/risk-daemon/agents/: AGENT_FLOW_DIAGRAM.md  EXECUTION_MASTER_GUIDE.md  QUICK_REFERENCE.md  README.md  TERMINAL_SETUP_GUIDE.md  doc-reviewer.md  flow.yaml  rm-coordinator.md  rm-developer.md  rm-planner.md  rm-sdk-analyst.md  rm-test-orchestrator.md  shared_context.yaml  test-failure-debugger.md  workflow-comms-refactor.md
Desktop/RM_SDK1/risk-daemon/architecture/: 00-overview.md  01-event-driven-core.md  02-risk-engine.md  03-enforcement-actions.md  04-state-management.md  05-configuration-system.md  06-cli-interfaces.md  07-notifications-logging.md  08-daemon-service.md  09-extensibility.md  10-data-flow-diagrams.md  11-architecture-tree-and-ownership.md  12-core-interfaces-and-events.md  13-non-functionals-and-ops.md  14-backlog-and-open-questions.md  16-configuration-implementation.md  17-service-wrapper-nssm.md  18-cli-interfaces-implementation.md  20-logging-framework.md  23-ipc-protocol-spec.md  99-handoff-to-sdk-analyst.md
Desktop/RM_SDK1/risk-daemon/commands/: coordinator.md  debugger.md
Desktop/RM_SDK1/risk-daemon/contracts/: sdk_contract.json
Desktop/RM_SDK1/risk-daemon/docs/: AUTONOMOUS_WORKFLOW.md
(+162 files in other folders)
