[project]
name = "custom-risk-daemon"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-mock>=3.14",
  "pydantic>=2.0",
  # optional if you'll mock HTTPX calls (SDK uses httpx)
  "respx>=0.21",
  "mypy>=1.18.2",
  "ruff>=0.14.0",
  "viztracer>=1.0.4",
  "watchdog>=6.0.0",
  "rich>=13.0.0", # Terminal UI for CLI interfaces
]

[tool.uv.sources]
project-x-py = { path = "../project-x-py", editable = true }

[dependency-groups]
dev = [
    "coverage>=7.11.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytz>=2025.2",
]
